# nextprime

./: CMakeLists.txt
include/: bignums.h  bignums.hpp  diemitko.h  diemitko.hpp  gen_nextprime.h  thread.h  thread.hpp
src/: bignums.cpp  diemitko.c  diemitko.cpp  gen_nextprime.c  main.c  main.cpp  thread.cpp
